fix: alignment UI issues.

--- a/src/components/taskdescription/DescriptionComponent.css
+++ b/src/components/taskdescription/DescriptionComponent.css
@@ -118,3 +118,24 @@
   width: 20px;
   height: 20px;
 }
+
+.holderdivpadding {
+  margin-left: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap; 
+}
+
+.holderdivStepPaddding {
+   margin-left: 15px;
+   margin-bottom: 10px;
+   display: flex;
+   flex-wrap: wrap;
+   align-items: center;
+
+}
+
+.holdetStepNamePadding {
+  flex:0.9;
+  margin-left: 10px;
+}
